fix missing top margin on feed management header

--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -530,6 +530,7 @@ footer p {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 1.5rem;
     margin-bottom: 2rem;
 }
 
